--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
           - stable
           - oldstable
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -27,12 +31,9 @@ jobs:
           go-version: ${{ matrix.go_version }}
           cache: true
       - name: test
-        run: go test -v -race -coverprofile=cover.os-${{ matrix.os }}.ver-${{ matrix.go_version }}.txt -covermode=atomic ./...
-      - name: upload coverage
-        uses: codecov/codecov-action@v3
+        run: go test -v -race -coverprofile=cover.out -covermode=atomic ./...
+      - uses: k1LoW/octocov-action@v1
         if: ${{ matrix.go_version == 'stable' }}
-        with:
-          files: ./cover.os-${{ matrix.os }}.ver-${{ matrix.go_version }}.txt
   determine_release:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
